@@ -1,3 +1,8 @@
+(26/06/14)
+==========
+
+· Added server > minidlna (1.1.3 or latest)
+
 (25/06/14)
 ==========
 
